# GSoC26-OpenVINO-CPP-PoC

./: .gitignore  CMakeLists.txt  README.md  main.cpp
